--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "gitmembers",
   "displayName": "gitMembers",
   "description": "using git blame in a visualization way",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "engines": {
     "vscode": "^1.93.0"
   },
+  "publisher": "Snowfly09",
   "categories": [
     "Other"
   ],
@@ -14,12 +15,12 @@
   "contributes": {
     "commands": [
       {
-        "command": "gitmembers.ikun",
-        "title": "ikun"
+        "command": "gitmembers.showGitBlameInTxT",
+        "title": "membersInTxT"
       },
       {
-        "command": "gitmembers.showGitBlame",
-        "title": "showGitBlame"
+        "command": "gitmembers.members",
+        "title": "membersRealTime"
       }
     ]
   },
@@ -32,14 +33,14 @@
     "test": "vscode-test"
   },
   "devDependencies": {
-    "@types/vscode": "^1.93.0",
     "@types/mocha": "^10.0.7",
     "@types/node": "20.x",
+    "@types/vscode": "^1.93.0",
     "@typescript-eslint/eslint-plugin": "^8.3.0",
     "@typescript-eslint/parser": "^8.3.0",
-    "eslint": "^9.9.1",
-    "typescript": "^5.5.4",
     "@vscode/test-cli": "^0.0.10",
-    "@vscode/test-electron": "^2.4.1"
+    "@vscode/test-electron": "^2.4.1",
+    "eslint": "^9.9.1",
+    "typescript": "^5.5.4"
   }
 }
